--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- this is a commment: you can change the title to anything you want but it is also fine to just leave it
     -->
-    <title>template-title</title>
+    <title>Tilted Towers?</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="styles.css">
@@ -53,8 +53,8 @@
           make sure that the model file is placed in the same repository where this index.html file is located
         -->
         <a-asset-item
-          id="template"
-          src="template.gltf"
+          id="among_us"
+          src="among_us.gltf"
         >
         </a-asset-item>
       </a-assets>
