--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         if your model is animated, type "animation-mixer" without the inverted commas in another line below gesture-handler with the same alignment
       -->
         <a-entity
-          id="template-model"
-          gltf-model="#template"
+          id="among_us-model"
+          gltf-model="#among_us"
           position="0 0 0"
           rotation="0 0 0"
           scale="1 1 1"
