--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
           rotation="0 0 0"
           scale="3 1 3"
           class="clickable"
-          gesture-handler        
+          gesture-handler
+          animation-mixer
         >
         </a-entity>
 
